[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Wall1.tscn" type="PackedScene" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = 13.0
margin_top = 15.0
margin_right = 90.0
margin_bottom = 67.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearButton" type="Button" parent="Panel"]
margin_left = 10.0013
margin_top = 8.36422
margin_right = 68.0013
margin_bottom = 44.3642
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wall1" parent="." instance=ExtResource( 2 )]
margin_left = 128.912
margin_top = 167.111
margin_right = 146.912
margin_bottom = 232.111

[node name="Wall2" parent="." instance=ExtResource( 2 )]
margin_left = 390.0
margin_top = 256.0
margin_right = 408.0
margin_bottom = 321.0

[node name="Wall3" parent="." instance=ExtResource( 2 )]
margin_left = 73.0
margin_top = 319.5
margin_right = 91.0
margin_bottom = 384.5
